--- a/shopapp-angular/shopappfe/src/app/component/register/register.component.html
+++ b/shopapp-angular/shopappfe/src/app/component/register/register.component.html
@@ -1,1 +1,93 @@
-<p>register works!</p>
+<!-- <app-header></app-header> -->
+<div class="container">
+  <form [formGroup]="registerForm">
+    <div class="row">
+      <div class="col-md-6 offset-md-3">
+        <div class="register-form mx-auto">
+          <h2 class="register-header">Đăng ký</h2>
+          <div class="form-group">
+            <label for="phone">Phone</label>
+            <input type="text" class="form-control" id="phone" (input)="onPhoneChange()" [(ngModel)]="phoneNumber"
+                   formControlName="phoneNumber"
+                   [class.is-invalid]="registerForm.get('phoneNumber')!.invalid && registerForm.get('phoneNumber')!.touched">>
+            <div class="divider-nospace"></div>
+            @if(registerForm.get('phoneNumber')!.invalid &&
+            registerForm.get('phoneNumber')!.touched) {
+            <div class="invalid-feedback">
+                Họ và tên là trường bắt buộc.
+            </div>
+            }
+          </div>
+          <!--          <div class="mt-3"></div>-->
+          <!--          <div class="form-group password-field">-->
+          <!--            <label for="password">Mật khẩu</label>-->
+          <!--            <input type="password" placeholder="Ít nhất 3 ký tự"-->
+          <!--                   class="form-control" id="password" [(ngModel)]="password" formControlName="password">-->
+          <!--            <i class="password-toggle fas fa-eye-slash"></i>-->
+          <!--            <div class="divider-nospace"></div>-->
+          <!--            <p class="text-warning"-->
+          <!--               *ngIf="registerForm.controls.password.touched && registerForm.controls.password.value === ''">-->
+          <!--              Vui lòng nhập mật khẩu</p>-->
+          <!--            <p class="text-warning"-->
+          <!--               *ngIf="registerForm.controls.password.touched && registerForm.controls.password?.errors?.minlength">-->
+          <!--              Vui lòng nhập mật khẩu dài hơn 3 ký tự</p>-->
+          <!--          </div>-->
+          <!--          <div class="mt-3"></div>-->
+          <!--          <div class="form-group password-field">-->
+          <!--            <label for="retype-password">Gõ lại mật khẩu</label>-->
+          <!--            <input type="password" placeholder="Ít nhất 3 ký tự"-->
+          <!--                   class="form-control" id="retype-password" [(ngModel)]="retypePassword"-->
+          <!--                   formControlName="retypePassword">-->
+          <!--            <i class="password-toggle fas fa-eye-slash"></i>-->
+          <!--            <div class="divider-nospace"></div>-->
+          <!--            <p class="text-warning"-->
+          <!--               *ngIf="registerForm.controls.retypePassword.touched && registerForm.controls.retypePassword.value === ''">-->
+          <!--              Vui lòng nhập lại mật khẩu</p>-->
+          <!--            <p class="text-warning"-->
+          <!--               *ngIf="registerForm.controls.retypePassword.touched && registerForm.controls.retypePassword?.errors?.minlength">-->
+          <!--              Vui lòng nhập mật khẩu dài hơn 3 ký tự</p>-->
+          <!--            <p class="text-warning"-->
+          <!--               *ngIf="registerForm.controls.retypePassword.touched && registerForm.errors?.passwordNotMatch">-->
+          <!--              Mật khẩu không khớp</p>-->
+          <!--          </div>-->
+          <!--          <div class="mt-3"></div>-->
+          <!--          <div class="form-group">-->
+          <!--            <label for="full-name">Họ và tên</label>-->
+          <!--            <input type="text" class="form-control" id="full-name" [(ngModel)]="fullName" formControlName="fullName">-->
+          <!--            <div class="divider-nospace"></div>-->
+          <!--          </div>-->
+          <!--          <div class="form-group">-->
+          <!--            <label for="date-of-birth">Ngày tháng năm sinh</label>-->
+          <!--            <input type="date" class="form-control" id="date-of-birth" [(ngModel)]="dateOfBirth"-->
+          <!--                   formControlName="dateOfBirth">-->
+          <!--            <div class="divider-nospace"></div>-->
+          <!--            <p class="text-warning"-->
+          <!--               *ngIf="registerForm.controls.dateOfBirth.touched">-->
+          <!--              Bạn phải trên 18 tuổi</p>-->
+          <!--          </div>-->
+          <!--          <div class="mt-3"></div>-->
+          <!--          <div class="form-group">-->
+          <!--            <label for="address">Địa chỉ</label>-->
+          <!--            <input type="text" class="form-control" id="address" [(ngModel)]="address" formControlName='address'>-->
+          <!--            <div class="divider-nospace"></div>-->
+          <!--          </div>-->
+          <!--          <div class="form-group">-->
+          <!--            <div class="form-check checkbox-text">-->
+          <!--                        <span style="display: flex;">-->
+          <!--                            <input type="checkbox" class="form-check-input" id="agree" [(ngModel)]="isAccepted"-->
+          <!--                                   formControlName="isAccepted">-->
+          <!--                            <label class="form-check-label text-start" for="agree">-->
+          <!--                                Tôi đồng ý với các điều khoản và điều kiện</label>-->
+          <!--                        </span>-->
+          <!--            </div>-->
+          <!--          </div>-->
+          <button type="button" class="register-button" (click)="register()">Đăng ký</button>
+          <div class="divider"></div>
+          <p class="text-center">Bạn đã có tài khoản? <span>
+                    <a href="#" class="register-link">Đăng nhập</a></span></p>
+        </div>
+      </div>
+    </div>
+  </form>
+</div>
+<!--<app-footer></app-footer>-->
