--- a/shopapp-angular/shopappfe/src/app/component/footer/footer.component.html
+++ b/shopapp-angular/shopappfe/src/app/component/footer/footer.component.html
@@ -1,1 +1,17 @@
-<p>footer works!</p>
+<footer>
+  <!-- Footer content goes here -->
+  <div class="footer">
+    <div class="container">
+      <div class="row footer-description">
+        <div class="col-md-6">
+          <p>&copy; 2023 Your Company. All rights reserved.</p>
+        </div>
+        <div class="col-md-6">
+          <p class="text-end">Terms of Service | Privacy Policy</p>
+        </div>
+      </div>
+    </div>
+  </div>
+</footer>
+
+
