--- a/shopapp-angular/shopappfe/src/app/app/app.component.html
+++ b/shopapp-angular/shopappfe/src/app/app/app.component.html
@@ -1,3 +1,4 @@
 <!-- <h1>sss</h1> -->
 <!--<app-register></app-register>-->
-<app-login></app-login>
+<!--<app-login></app-login>-->
+<app-home></app-home>
