update UserComponent backend frontend and Navigate screen

--- a/shopapp-angular/shopappfe/src/app/app/app.component.html
+++ b/shopapp-angular/shopappfe/src/app/app/app.component.html
@@ -1,4 +1,8 @@
 <!-- <h1>sss</h1> -->
 <!--<app-register></app-register>-->
 <!--<app-login></app-login>-->
-<app-home></app-home>
+<!--<app-home></app-home>-->
+<!--<app-detail-product></app-detail-product>-->
+<!--<app-order></app-order>-->
+<!--<app-order-confirm></app-order-confirm>-->
+<router-outlet></router-outlet>
