--- a/shopapp-angular/shopappfe/src/app/component/detail-product/detail-product.component.html
+++ b/shopapp-angular/shopappfe/src/app/component/detail-product/detail-product.component.html
@@ -11,9 +11,20 @@
           <div *ngFor="let image of product?.product_images; let i = index"
                class="carousel-item" [ngClass]="{'active': i === currentImageIndex}">
             <div class="square-image">
-              <img [src]="image.imageUrl" class="product-image" alt="Product Image">
+              <img [src]="image.image_url" class="product-image" alt="Product Image">
             </div>
           </div>
+
+<!--          @for(image of product?.product_images;-->
+<!--          track image.image_url;let i = $index;) {-->
+<!--          <div-->
+<!--             class="carousel-item"-->
+<!--              [ngClass]="{'active': i === currentImageIndex}">-->
+<!--                <div class="square-image">-->
+<!--                  <img [src]="image.image_url" class="product-image" alt="Product Image">-->
+<!--                </div>-->
+<!--              </div>-->
+<!--          }-->
         </div>
         <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample"
                 data-bs-slide="prev" (click)="previousImage()">
@@ -32,7 +43,7 @@
                class="thumbnail-item"
                [ngClass]="{'active': i === currentImageIndex}"
                (click)="thumbnailClick(i)">
-            <img [src]="image.imageUrl" class="thumbnail-image" alt="Thumbnail Image">
+            <img [src]="image.image_url" class="thumbnail-image" alt="Thumbnail Image">
           </div>
         </div>
       </div>
