--- a/shopapp-angular/shopappfe/src/app/component/header/header.component.scss
+++ b/shopapp-angular/shopappfe/src/app/component/header/header.component.scss
@@ -26,3 +26,25 @@ header {
   background-color: rgb(127, 68, 255) !important;
   color: white !important;
 }
+
+/* Add this CSS to your project's stylesheet */
+
+.popover-list {
+  padding: 10px;
+}
+
+.popover-body {
+  padding: 0;
+}
+
+.popover-item {
+  display: block;
+  margin-bottom: 5px;
+  text-decoration: none;
+  color: #333;
+}
+
+.popover-item:hover {
+  background-color: #f0f0f0;
+  color: rgb(127, 68, 255);
+}
