update user-profile, admin dashboard

--- a/shopapp-angular/shopappfe/src/app/component/header/header.component.scss
+++ b/shopapp-angular/shopappfe/src/app/component/header/header.component.scss
@@ -1,3 +1,4 @@
+@import '../../styles/shared-styles.scss';
 
 header {
   background-color: rgba(0, 0, 0, 0);
@@ -23,7 +24,7 @@ header {
 }
 
 .navbar .container .navbar-nav .nav-link.active {
-  background-color: rgb(127, 68, 255) !important;
+  background-color: $shopapp-color !important;
   color: white !important;
 }
 
@@ -46,5 +47,5 @@ header {
 
 .popover-item:hover {
   background-color: #f0f0f0;
-  color: rgb(127, 68, 255);
+  color: $shopapp-color;
 }
