--- a/shopapp-angular/shopappfe/src/app/component/detail-product/detail-product.component.scss
+++ b/shopapp-angular/shopappfe/src/app/component/detail-product/detail-product.component.scss
@@ -1,3 +1,5 @@
+@import '../../styles/shared-styles.scss';
+
 .intro-section {
   color: white;
   padding: 20px;
@@ -9,6 +11,7 @@
   width: 100%;
   object-fit: cover;
 }
+
 .thumbnail-container {
   display: flex;
   justify-content: space-between;
@@ -35,8 +38,9 @@
 }
 
 .thumbnail-item.active {
-  border: 2px solid red;
+  border: 4px solid $shopapp-tint-color;
 }
+
 .product-details {
   color: white;
   padding: 20px;
@@ -51,6 +55,7 @@
 .product-actions button {
   margin-right: 10px;
 }
+
 .border-wrapper {
   border: 1px solid white;
 }
@@ -69,6 +74,7 @@
   font-size: 16px;
   cursor: pointer;
 }
+
 .product-quantity input {
   background-color: transparent;
   border: none;
@@ -78,6 +84,7 @@
   width: 40px;
   margin: 0 10px;
 }
+
 .product-quantity input:focus {
   outline: none;
 }
