--- a/shopapp-angular/shopappfe/src/app/component/login/login.component.html
+++ b/shopapp-angular/shopappfe/src/app/component/login/login.component.html
@@ -1,4 +1,4 @@
-<!--<app-header></app-header>-->
+<app-header></app-header>
 <div class="container">
   <div class="row">
     <div class="col-md-6 offset-md-3">
@@ -56,11 +56,13 @@
           class="login-button">Đăng nhập
         </button>
         <div class="divider"></div>
-<!--        <p class="text-center">Bạn chưa đăng ký? <span>-->
-<!--                    <a class="register-link"-->
-<!--                       (click)="createAccount()">Tạo tài khoản</a>-->
-<!--                </span></p>-->
+        <p class="text-center">Bạn chưa đăng ký? <span>
+                    <a class="register-link"
+                       (click)="createAccount()">Tạo tài khoản</a>
+                </span></p>
 
       </div>
     </div>
-<!--    <app-footer></app-footer>-->
+  </div>
+</div>
+<app-footer></app-footer>
