--- a/shopapp-angular/shopappfe/src/app/component/login/login.component.scss
+++ b/shopapp-angular/shopappfe/src/app/component/login/login.component.scss
@@ -1,9 +1,12 @@
+@import '../../styles/shared-styles.scss';
+
 .container {
   color: white;
   height: 100vh;
 }
+
 .login-form {
-  background-color: rgb(12, 12, 55);
+  background-color: $shopapp-background-color;
   border-radius: 10px;
   padding: 20px;
   max-width: 500px;
@@ -11,21 +14,23 @@
   align-items: center;
   justify-content: center;
 }
+
 .login-header {
   text-align: center;
-  color: rgb(105, 244, 181);
+  color: $shopapp-title-color;
   margin-bottom: 20px;
 }
+
 .form-control {
   background-color: transparent;
   border: none;
   color: white;
 }
+
 .form-control:focus {
   color: white;
   background-color: transparent;
   outline: none;
-  box-shadow: none;
   border-color: transparent;
 }
 
@@ -36,14 +41,16 @@
 .password-field {
   position: relative;
 }
+
 .password-toggle {
   position: absolute;
   top: 50%;
   right: 10px;
   transform: translateY(-50%);
-  color: rgb(105, 244, 181);
+  color: $shopapp-title-color;
   cursor: pointer;
 }
+
 .checkbox-text {
   color: rgb(243, 165, 42);
   display: flex;
@@ -51,10 +58,11 @@
   align-items: center;
   margin-top: 10px;
 }
+
 /* Màu checkbox khi được chọn */
 .checkbox-text input[type="checkbox"]:checked {
   border-color: white;
-  background-color: rgb(233, 66, 178);
+  background-color: $shopapp-tint-color;
 }
 
 .form-check-input {
@@ -62,19 +70,20 @@
 }
 
 .register-link {
-  color: rgb(105, 244, 181);
+  color: $shopapp-title-color;
   text-decoration: none;
 }
+
 .access-right {
-  background-color: #1d173d !important;
   margin-top: 20px;
   width: 200px;
   color: white;
-  border: 1px solid rgb(225, 64, 180);
+  background-color: $shopapp-background-color !important;
+  border: 1px solid $shopapp-tint-color;
 }
 
 .access-right:focus {
-  border: 1px solid rgb(225, 64, 180);
+  border: 1px solid $shopapp-tint-color;
 }
 
 .form-control::placeholder {
@@ -95,7 +104,7 @@
 }
 
 .login-button {
-  background: linear-gradient(to right, rgb(225, 64, 180), rgb(126, 43, 237));
+  background: linear-gradient(to right, $shopapp-tint-color, $shopapp-color);
   color: white;
   border-radius: 30px;
   width: 100%;
@@ -103,6 +112,7 @@
   margin-top: 20px;
   border: none;
 }
+
 .divider {
   height: 1px;
   background-color: rgb(243, 165, 42);
