--- a/shopapp-angular/shopappfe/src/app/styles/shared-styles.scss
+++ b/shopapp-angular/shopappfe/src/app/styles/shared-styles.scss
@@ -1,10 +1,10 @@
-//$shopapp-color: rgb(127, 68, 255);
-//$shopapp-tint-color: rgb(233, 66, 178);
-//$shopapp-title-color: rgb(105, 244, 181);
-//$shopapp-background-color: rgb(19, 23, 42);
-:root {
-  --shopapp-color: rgb(127, 68, 255);
-  --shopapp-tint-color: rgb(233, 66, 178);
-  --shopapp-title-color: rgb(105, 244, 181);
-  --shopapp-background-color: rgb(19, 23, 42);
-}
+$shopapp-color: rgb(127, 68, 255);
+$shopapp-tint-color: rgb(233, 66, 178);
+$shopapp-title-color: rgb(105, 244, 181);
+$shopapp-background-color: rgb(19, 23, 42);
+//:root {
+//  --shopapp-color: rgb(127, 68, 255);
+//  --shopapp-tint-color: rgb(233, 66, 178);
+//  --shopapp-title-color: rgb(105, 244, 181);
+//  --shopapp-background-color: rgb(19, 23, 42);
+//}
