--- a/shopapp-angular/shopappfe/src/app/component/admin/product/product.admin.component.html
+++ b/shopapp-angular/shopappfe/src/app/component/admin/product/product.admin.component.html
@@ -40,15 +40,15 @@
             </td>
             <td>{{ product.description }}</td>
             <td>
-<!--              <div style="display: flex; gap: 10px;">-->
-<!--                <button class="btn btn-primary" -->
-<!--                    (click)="updateProduct(product.id)">-->
-<!--                  Update-->
-<!--                </button>-->
-<!--                <button class="btn btn-danger" -->
-<!--                  (click)="deleteProduct(product)">Delete-->
-<!--                </button>            -->
-<!--                </div>-->
+              <div style="display: flex; gap: 10px;">
+                <button class="btn btn-primary"
+                    (click)="updateProduct(product.id)">
+                  Update
+                </button>
+                <button class="btn btn-danger"
+                  (click)="deleteProduct(product)">Delete
+                </button>
+                </div>
             </td>
           </tr>
         }
